src/test/deca/syntax/invalid/chaine_incomplete.deca
// Description:
//      String avec " manquant à la fin
//
// Resultats:
//token recognition error
//
"chaine pas finie

